git-tasks: tidy up